--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title> Simple Unit Converter </title>
+	<title>Unit Converter | @code.architects</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="./style.css">
+	<link rel="stylesheet" href="./unit.css">
 </head>
 
 <body>
 	<div class="container">
-		<h2 class="title">Unit Converter</h2>
+		<h2 class="title"> Simple Unit Converter</h2>
 		<div class="input-container">
 			<label for="millimeter">Millimeter</label>
 			<input type="number" id="millimeter" placeholder="Millimeter"
@@ -32,7 +32,9 @@
 			<input type="number" id="kilometer" placeholder="Kilometer" onchange="kilometer(parseFloat(this.value))" />
 		</div>
 	</div>
-	<script src="script.js"></script>
+	<script src="unit.js"></script>
 </body>
 
 </html>
+
+
