--- a/Portfolio.html
+++ b/Portfolio.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio Code</title>
-  <link rel="stylesheet" href="Portfolio.css" />
+  <link rel="stylesheet" href="index.css" />
   <script src="https://kit.fontawesome.com/66aa7c98b3.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -43,7 +43,9 @@
             <h1 class="about-heading">About Me</h1>
           </div>
           <img src="pimage.png" alt="image" />        
-  
+          <p>
+           I am a CSE student at MIT Manipal I really enjoy solving problems and am good at Programming languages such as C, java,HTML, CSS  and javascript I do like algorithmic problem-solving.
+          </p>
         </div>
         <div class="skills">
           <div class="right-content">
@@ -103,9 +105,9 @@
       </div>
     </div>
   </div>
-  <!-- JAVASCRIPT -->
-  <script src="app.js"></script>
+
+  <script src="index.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 
-</html>
+</html> 
